# enchante

./: .enchante.yml  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
src/enchante/: main.py
src/enchante/templates/table/: __init__.py.jinja  crud.py.jinja  model.py.jinja  schema.py.jinja
src/enchante/utils/: __init__.py  base.py  config.py  crud.py  partial.py  types.py
