[tool.poetry]
name = "enchante"
version = "0.1.0"
description = "CLI tool to help scaffolding relational DB architecture as code"
authors = ["Steven John <steven@stevenjohn.co>"]
license = "MIT"
readme = "README.md"
packages = [{include = "enchante", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"
SQLAlchemy = "^2.0.19"
alembic = "^1.11.1"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
